link updates test

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             </div>
             <nav>
             <ul>
-                <li class="inline-block"><a href="https://ldudkowski3.github.io/HW-19/portfoliopage.html">PORTFOLIO</a></li>
-                <li class="inline-block"><a href="https://ldudkowski3.github.io/HW-19/aboutme.html">ABOUT ME</a></li>
-                <li class="inline-block"><a href="https://ldudkowski3.github.io/HW-19/contact.html">CONTACT</a></li>
-                <li class="inline-block"><a href="https://ldudkowski3.github.io/HW-19/resume.html">RESUME</a></li>
+                <li class="inline-block"><a href="/HW-19/portfoliopage.html">PORTFOLIO</a></li>
+                <li class="inline-block"><a href="/HW-19/aboutme.html">ABOUT ME</a></li>
+                <li class="inline-block"><a href="/HW-19/contact.html">CONTACT</a></li>
+                <li class="inline-block"><a href="/HW-19/resume.html">RESUME</a></li>
             </ul>
             </nav>
         </header>
