--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </div>
             <nav>
             <ul>
-                <li class="inline-block"><a href="/HW-19/portfoliopage.html">PORTFOLIO</a></li>
+                <li class="inline-block"><a href="/HW-19/portfolio.html">PORTFOLIO</a></li>
                 <li class="inline-block"><a href="/HW-19/aboutme.html">ABOUT ME</a></li>
                 <li class="inline-block"><a href="/HW-19/contact.html">CONTACT</a></li>
                 <li class="inline-block"><a href="/HW-19/resume.html">RESUME</a></li>
