--- a/aboutme.html
+++ b/aboutme.html
@@ -3,32 +3,41 @@
 
 <head>
   <title>Lance Dudkowski UX Portfolio</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="fonts">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="fonts">
+  <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"  type="text/js" href="/js/style.js">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
   <nav>
-    <div class="navGrid">
-      <div class="logo">
-        <img class="ld-logo" src="images/LD-Logo-Blue.png">
+    <nav>
+      <div class="navGrid">
+        <div class="logo">
+          <a href="index.html">
+            <img class="ld-logo" src="images/LD-Logo-Blue.png">
+          </a>
+        </div>
+        <div class="navigationBar">
+          <ul class="navList">
+            <li class="navItem">
+              <a class="navItem inactive active" href="portfolio.html">PORTFOLIO</a></li>
+            <li class="navItem">
+              <a class="navItem inactive active" href="aboutme.html"><b>ABOUT ME</b></a></li>
+            <li class="navItem">
+              <a class="navItem inactive active" href="contact.html">CONTACT</a></li>
+            <li class="navItem">
+              <a class="navItem inactive active" href="resume.html">RESUME</a></li>
+          </ul>
+          <div>
+          <img class="menuIcon" src="images/Menu-Icon.png"></div>
+        </div>
       </div>
-      <div class="navigationBar">
-        <ul class="navList">
-          <li class="navItem">PORTFOLIO</li>
-          <li class="navItem">ABOUT ME</li>
-          <li class="navItem">CONTACT</li>
-          <li class="navItem">RESUME</li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    </nav>
 
   <div class="contentArea">
-    <h1 id="title">Contact</h1>
+    <h1 id="title">About Me</h1>
     <p>Excited and dependable UX Designer, with an Industrial Design background, seeking to bring the WOW factor and a
       smile to the user’s face. Over the last few years, I have enjoyed how Industrial Design can positively affect the
       way people perceive a product and how I brought that initial concept to life. Crossing over to UX is the next
@@ -37,10 +46,10 @@
   </div>
   <footer>
     <ul>
-      <li class="footerItem">PORTFOLIO</li>
-      <li class="footerItem">ABOUT ME</li>
-      <li class="footerItem">CONTACT</li>
-      <li class="footerItem">RESUME</li>
+      <li class="footerItem"><a href="portfolio.html">PORTFOLIO</a></li>
+      <li class="footerItem"><a href="aboutme.html">ABOUT ME</a></li>
+      <li class="footerItem"><a href="contact.html">CONTACT</a></li>
+      <li class="footerItem"><a href="resume.html">RESUME</a></li>
     </ul>
   </footer>
 </body>
