--- a/index.html
+++ b/index.html
@@ -1,53 +1,62 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Lance Dudkowski UX Portfolio</title>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-    </head>
-    <body>
-        <header class="navigationBar">
-            <div class="ld-logo">
-                <img src="images/LD-Logo-Blue.png" height="60px">
-            </div>
-            <nav>
-            <ul>
-                <li class="inline-block"><a href="/HW-19/portfolio.html">PORTFOLIO</a></li>
-                <li class="inline-block"><a href="/HW-19/aboutme.html">ABOUT ME</a></li>
-                <li class="inline-block"><a href="/HW-19/contact.html">CONTACT</a></li>
-                <li class="inline-block"><a href="/HW-19/resume.html">RESUME</a></li>
-            </ul>
-            </nav>
-        </header>
-            <!-- <svg height="210" width="500" z-index="20">
-                <line x1="50" y1="50" x2="200" y2="50" style="stroke:rgb(20,0,255); stroke-width:5" />
-            </svg> -->
-        <section class="content">
-            <div class="contentLeft">
-                <h1 class="title"> About Me</h1>
-                <p class="paragraphText">I am excited about my transition into UX design! With a background in industrial design, I have thrived in
-                    collaborative, innovative, and fun work environments for the past 7 years. I helped my teams see the importance of
-                    well-designed products and improved the time to market for their goods. 
-                    <br><br>My philosophy on good design is about creating a
-                    good experience for the consumer. Creative, pleasant interactions can bring a smile to the user’s face. Bad design does
-                    not. 
-                    <br><br>I love to spend time with family and enjoy the great
-                    outdoors. I also enjoy listening to music, watching superhero movies, and giant anime robots. I enjoy game nights with
-                    friends and trying out the newest escape room in town. I appreciate a good puzzle / challenge.
-                </p>
-            </div>
-            <div class="contentRight">    
-                <img class="headshot" src="images/Lance-Headshot.jpg">
-            </div>
-        </section>
-        <footer>
-            <ul>
-                <li class="inline-block">PORTFOLIO</li>
-                <li class="inline-block">ABOUT ME</li>
-                <li class="inline-block">CONTACT</li>
-                <li class="inline-block">RESUME</li>
-            </ul>
-        </footer>
-    </body>
+
+<head>
+  <title>Lance Dudkowski UX Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="fonts">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="fonts">
+  <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"  type="text/js" href="/js/style.js">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+
+<body>
+  <nav>
+    <div class="navGrid">
+      <div class="logo">
+        <a href="index.html">
+          <img class="ld-logo" src="images/LD-Logo-Blue.png">
+        </a>
+      </div>
+      <div class="navigationBar">
+        <ul class="navList">
+          <li class="navItem">
+            <a class="navItem inactive active" href="portfolio.html">PORTFOLIO</a></li>
+          <li class="navItem">
+            <a class="navItem inactive active" href="aboutme.html">ABOUT ME</a></li>
+          <li class="navItem">
+            <a class="navItem inactive active" href="contact.html">CONTACT</a></li>
+          <li class="navItem">
+            <a class="navItem inactive active" href="resume.html">RESUME</a></li>
+        </ul>
+        <div>
+        <img class="menuIcon" src="images/Menu-Icon.png"></div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="contentArea">
+    <div class="contentLeft">
+      <h1 class="title">Designing experiences for the <b>delight</b> of users.</h1>
+      <h1>Lance Dudkowski</h1>
+      </p>
+  </div>
+  <div class="contentRight">    
+      <img class="headshot" src="images/Lance-Headshot.jpg">
+  </div>
+    
+  </div>
+
+  <footer>
+    <div class="flexFooter">
+    <ul>
+      <li> <a class="footerItem" href="portfolio.html">PORTFOLIO</a></li>
+      <li> <a class="footerItem" href="aboutme.html">ABOUT ME</a></li>
+      <li> <a class="footerItem" href="contact.html">CONTACT</a></li>
+      <li> <a class="footerItem" href="resume.html">RESUME</a></li>
+    </ul>
+  </div>
+  </footer>
+</body>
+
 </html>
