--- a/resume.html
+++ b/resume.html
@@ -3,10 +3,10 @@
 
 <head>
   <title>Lance Dudkowski UX Portfolio</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="fonts">
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="fonts">
+  <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"  type="text/js" href="/js/style.js">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -14,15 +14,23 @@
   <nav>
     <div class="navGrid">
       <div class="logo">
-        <img class="ld-logo" src="images/LD-Logo-Blue.png">
+        <a href="index.html">
+          <img class="ld-logo" src="images/LD-Logo-Blue.png">
+        </a>
       </div>
       <div class="navigationBar">
         <ul class="navList">
-          <li class="navItem">PORTFOLIO</li>
-          <li class="navItem">ABOUT ME</li>
-          <li class="navItem">CONTACT</li>
-          <li class="navItem">RESUME</li>
+          <li class="navItem">
+            <a class="navItem inactive active" href="portfolio.html">PORTFOLIO</a></li>
+          <li class="navItem">
+            <a class="navItem inactive active" href="aboutme.html">ABOUT ME</a></li>
+          <li class="navItem">
+            <a class="navItem inactive active" href="contact.html">CONTACT</a></li>
+          <li class="navItem">
+            <a class="navItem inactive active" href="resume.html"><b>RESUME</b></a></li>
         </ul>
+        <div>
+        <img class="menuIcon" src="images/Menu-Icon.png"></div>
       </div>
     </div>
   </nav>
@@ -98,10 +106,10 @@
   </div>
   <footer>
     <ul>
-      <li class="footerItem">PORTFOLIO</li>
-      <li class="footerItem">ABOUT ME</li>
-      <li class="footerItem">CONTACT</li>
-      <li class="footerItem">RESUME</li>
+      <li class="footerItem"><a href="portfolio.html">PORTFOLIO</a></li>
+      <li class="footerItem"><a href="aboutme.html">ABOUT ME</a></li>
+      <li class="footerItem"><a href="contact.html">CONTACT</a></li>
+      <li class="footerItem"><a href="resume.html">RESUME</a></li>
     </ul>
   </footer>
 </body>
