--- a/portfolio.html
+++ b/portfolio.html
@@ -53,14 +53,17 @@
     </div>
   </div>
 
-  <footer>
-    <ul>
-      <li class="footerItem"><a href="portfolio.html">PORTFOLIO</a></li>
-      <li class="footerItem"><a href="aboutme.html">ABOUT ME</a></li>
-      <li class="footerItem"><a href="contact.html">CONTACT</a></li>
-      <li class="footerItem"><a href="resume.html">RESUME</a></li>
-    </ul>
-  </footer>
+<footer>
+  <div class="flexFooter">
+  <ul class="footerNav">
+    <li> <a class="footerItem" href="portfolio.html">PORTFOLIO</a></li>
+    <li> <a class="footerItem" href="aboutme.html">ABOUT ME</a></li>
+    <li> <a class="footerItem" href="contact.html">CONTACT</a></li>
+    <li> <a class="footerItem" href="resume.html">RESUME</a></li>
+  </ul>
+  </div>
+</footer>
+
 </body>
 
 </html>
