--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <div class="navigationBar">
         <ul class="navList">
           <li class="navItem">
-            <a class="navItem inactive active" href="portfolio.html">PORTFOLIO</a></li>
+            <a class="navItem" href="portfolio.html">PORTFOLIO</a></li>
           <li class="navItem">
-            <a class="navItem inactive active" href="aboutme.html">ABOUT ME</a></li>
+            <a class="navItem" href="aboutme.html">ABOUT ME</a></li>
           <li class="navItem">
-            <a class="navItem inactive active" href="contact.html">CONTACT</a></li>
+            <a class="navItem" href="contact.html">CONTACT</a></li>
           <li class="navItem">
-            <a class="navItem inactive active" href="resume.html">RESUME</a></li>
+            <a class="navItem" href="resume.html">RESUME</a></li>
         </ul>
         <div>
         <img class="menuIcon" src="images/Menu-Icon.png"></div>
@@ -37,26 +37,31 @@
 
   <div class="contentArea">
     <div class="contentLeft">
+      <div class="leftTop">
       <h1 class="title">Designing experiences for the <b>delight</b> of users.</h1>
+    </div>
+    <div class="leftBottom">
       <h1>Lance Dudkowski</h1>
-      </p>
+      <h2>User Experience Design | Industrial Design</h2>
+    </div>
   </div>
+
   <div class="contentRight">    
-      <img class="headshot" src="images/Lance-Headshot.jpg">
+      <img class="workShot" src="images/LAP Logo.png">
   </div>
     
   </div>
 
-  <footer>
-    <div class="flexFooter">
-    <ul>
-      <li> <a class="footerItem" href="portfolio.html">PORTFOLIO</a></li>
-      <li> <a class="footerItem" href="aboutme.html">ABOUT ME</a></li>
-      <li> <a class="footerItem" href="contact.html">CONTACT</a></li>
-      <li> <a class="footerItem" href="resume.html">RESUME</a></li>
-    </ul>
+<footer>
+  <div class="flexFooter">
+  <ul class="footerNav">
+    <li> <a class="footerItem" href="portfolio.html">PORTFOLIO</a></li>
+    <li> <a class="footerItem" href="aboutme.html">ABOUT ME</a></li>
+    <li> <a class="footerItem" href="contact.html">CONTACT</a></li>
+    <li> <a class="footerItem" href="resume.html">RESUME</a></li>
+  </ul>
   </div>
-  </footer>
-</body>
+</footer>
 
+</body>
 </html>
