--- a/resume.html
+++ b/resume.html
@@ -21,13 +21,13 @@
       <div class="navigationBar">
         <ul class="navList">
           <li class="navItem">
-            <a class="navItem inactive active" href="portfolio.html">PORTFOLIO</a></li>
+            <a class="navItem" href="portfolio.html">PORTFOLIO</a></li>
           <li class="navItem">
-            <a class="navItem inactive active" href="aboutme.html">ABOUT ME</a></li>
+            <a class="navItem" href="aboutme.html">ABOUT ME</a></li>
           <li class="navItem">
-            <a class="navItem inactive active" href="contact.html">CONTACT</a></li>
+            <a class="navItem" href="contact.html">CONTACT</a></li>
           <li class="navItem">
-            <a class="navItem inactive active" href="resume.html"><b>RESUME</b></a></li>
+            <a class="navItem" href="resume.html"><b>RESUME</b></a></li>
         </ul>
         <div>
         <img class="menuIcon" src="images/Menu-Icon.png"></div>
@@ -104,14 +104,17 @@
       <button>Contact me</button>
     </div>
   </div>
-  <footer>
-    <ul>
-      <li class="footerItem"><a href="portfolio.html">PORTFOLIO</a></li>
-      <li class="footerItem"><a href="aboutme.html">ABOUT ME</a></li>
-      <li class="footerItem"><a href="contact.html">CONTACT</a></li>
-      <li class="footerItem"><a href="resume.html">RESUME</a></li>
-    </ul>
-  </footer>
+<footer>
+  <div class="flexFooter">
+  <ul class="footerNav">
+    <li> <a class="footerItem" href="portfolio.html">PORTFOLIO</a></li>
+    <li> <a class="footerItem" href="aboutme.html">ABOUT ME</a></li>
+    <li> <a class="footerItem" href="contact.html">CONTACT</a></li>
+    <li> <a class="footerItem" href="resume.html">RESUME</a></li>
+  </ul>
+  </div>
+</footer>
+
 </body>
 
 </html>
