--- a/aboutme.html
+++ b/aboutme.html
@@ -11,39 +11,50 @@
 </head>
 
 <body>
-  <nav>
-    <nav>
-      <div class="navGrid">
-        <div class="logo">
-          <a href="index.html">
-            <img class="ld-logo" src="images/LD-Logo-Blue.png">
-          </a>
-        </div>
-        <div class="navigationBar">
-          <ul class="navList">
-            <li class="navItem">
-              <a class="navItem" href="portfolio.html">PORTFOLIO</a></li>
-            <li class="navItem">
-              <a class="navItem" href="aboutme.html"><b>ABOUT ME</b></a></li>
-            <li class="navItem">
-              <a class="navItem" href="contact.html">CONTACT</a></li>
-            <li class="navItem">
-              <a class="navItem" href="resume.html">RESUME</a></li>
-          </ul>
-          <div>
-          <img class="menuIcon" src="images/Menu-Icon.png"></div>
-        </div>
-      </div>
-    </nav>
-
-  <div class="contentArea">
-    <h1 id="title">About Me</h1>
-    <p>Excited and dependable UX Designer, with an Industrial Design background, seeking to bring the WOW factor and a
-      smile to the user’s face. Over the last few years, I have enjoyed how Industrial Design can positively affect the
-      way people perceive a product and how I brought that initial concept to life. Crossing over to UX is the next
-      logical step to test and apply my creativity and design skills to continually add good design in the world.</p>
-      
+<nav>
+  <div class="navGrid">
+    <div class="logo">
+      <a href="index.html">
+        <img class="ld-logo" src="images/LD-Logo-Blue.png">
+      </a>
+    </div>
+    <div class="navigationBar">
+      <ul class="navList">
+        <li class="navItem">
+          <a class="navItem" href="portfolio.html">PORTFOLIO</a></li>
+        <li class="navItem">
+          <a class="navItem" href="aboutme.html"><b>ABOUT ME</b></a></li>
+        <li class="navItem">
+          <a class="navItem" href="contact.html">CONTACT</a></li>
+        <li class="navItem" id="lastNav">
+          <a class="navItem" id="lastNav" href="resume.html">RESUME</a></li>
+      </ul>
+      <div>
+      <img class="menuIcon" src="images/Menu-Icon.png"></div>
+    </div>
   </div>
+</nav>
+<div class="contentArea">
+  <div class="contentLeft">
+    <div class="leftTop">
+    <h1 id="title">About Me</h1>
+    <p>I am excited about my transition into UX design! With a background in industrial design, I have thrived in collaborative, innovative, and fun work environments for the past 7 years. I helped my teams see the importance of well-designed products and improved the time to market for their goods. 
+      <br><br>My philosophy on good design is about creating a good experience for the consumer. Creative, pleasant interactions can bring a smile to the user’s face. Bad design does not. 
+      <br><br>I love to spend time with family and enjoy the great outdoors. I also enjoy listening to music, watching superhero movies, and giant anime robots. I enjoy game nights with friends and trying out the newest escape room in town. I appreciate a good puzzle / challenge.
+    </p>
+    </div>
+    <div class="leftBottom">
+    </div>
+  </div>
+  <div class="contentRight">
+    <div class="rightTop">
+      <img class="headShot" src="images/Lance-Headshot.jpg" width="100%">
+    </div>
+    <div class="rightBottom">
+    </div>
+  </div>
+</div>
+
 <footer>
   <div class="flexFooter">
   <ul class="footerNav">
