--- a/case-study-LifeLine.html
+++ b/case-study-LifeLine.html
@@ -26,8 +26,8 @@
             <a class="navItem" href="aboutme.html">ABOUT ME</a></li>
           <li class="navItem">
             <a class="navItem" href="contact.html">CONTACT</a></li>
-          <li class="navItem">
-            <a class="navItem" href="resume.html">RESUME</a></li>
+          <li class="navItem" id="lastNav">
+            <a class="navItem" id="lastNav" href="resume.html">RESUME</a></li>
         </ul>
         <div>
         <img class="menuIcon" src="images/Menu-Icon.png"></div>
