--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,8 @@
             <a class="navItem" href="aboutme.html">ABOUT ME</a></li>
           <li class="navItem">
             <a class="navItem" href="contact.html"><b>CONTACT</b></a></li>
-          <li class="navItem">
-            <a class="navItem" href="resume.html">RESUME</a></li>
+          <li class="navItem" id="lastNav">
+            <a class="navItem" id="lastNav" href="resume.html">RESUME</a></li>
         </ul>
         <div>
         <img class="menuIcon" src="images/Menu-Icon.png"></div>
@@ -36,13 +36,33 @@
   </nav>
 
   <div class="contentArea">
-    <h1 id="title">Contact</h1>
-    <p>Excited and dependable UX Designer, with an Industrial Design background, seeking to bring the WOW factor and a
-      smile to the user’s face. Over the last few years, I have enjoyed how Industrial Design can positively affect the
-      way people perceive a product and how I brought that initial concept to life. Crossing over to UX is the next
-      logical step to test and apply my creativity and design skills to continually add good design in the world.</p>
+    <div class="contentLeft">
+      <div class="leftTop">
+      <h1 id="title">Let's Talk!</h1>
+      <p>My mom would always laugh when I asked her to “talk” with me. It usually meant she got stuck with me talking her head off with some Transformer design or new superhero team I had imagined. But she knew how important that was for me to share my ideas and build our relationship. 
+      So, let’s talk! Or email. I look forward to getting to know you better. Feel free to message me via the form, email or LinkedIn.</p>
+      </div>
+      <div class="leftBottom">
+        <input type="text" id="name" name="name" value="Name" style="width:500px"><br><br>
+        <input type="text" id="email" name="email" value="Email" style="width:500px"><br><br>
+        <textarea name="message" style="width:500px; height:200px;">Leave message here</textarea>
       
+        <button>Submit</button>
+      </div>
+    </div>
+    <div class="contentRight">
+      <div class="rightTop">
+        <img class="headShot" src="images/Lance-Headshot.jpg" width="100%">
+      </div>
+      <div class="rightBottom">
+        <h3>EMAIL:</h3>
+        <p>lance.dudkowski@gmail.com</p>
+        <h3>LINKEDIN:</h3>
+        <p>linkedin.com/in/lancedudkowski</p>
+      </div>
+    </div>
   </div>
+
 <footer>
   <div class="flexFooter">
   <ul class="footerNav">
