--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,13 @@
       <div class="navigationBar">
         <ul class="navList">
           <li class="navItem">
-            <a class="navItem inactive active" href="portfolio.html"><b>PORTFOLIO</b></a></li>
+            <a class="navItem" href="portfolio.html"><b>PORTFOLIO</b></a></li>
           <li class="navItem">
-            <a class="navItem inactive active" href="aboutme.html">ABOUT ME</a></li>
+            <a class="navItem" href="aboutme.html">ABOUT ME</a></li>
           <li class="navItem">
-            <a class="navItem inactive active" href="contact.html">CONTACT</a></li>
-          <li class="navItem">
-            <a class="navItem inactive active" href="resume.html">RESUME</a></li>
+            <a class="navItem" href="contact.html">CONTACT</a></li>
+          <li class="navItem" id="lastNav">
+            <a class="navItem" id="lastNav" href="resume.html">RESUME</a></li>
         </ul>
         <div>
         <img class="menuIcon" src="images/Menu-Icon.png"></div>
