updated links hw19

--- a/case-study-LifeLine.html
+++ b/case-study-LifeLine.html
@@ -5,6 +5,7 @@
   <title>Lance Dudkowski UX Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="fonts">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="fonts">
   <link rel="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"  type="text/js" href="/js/style.js">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -36,12 +37,22 @@
   </nav>
 
   <div class="contentArea">
-    <h1 id="title">LifeLine Animal Project</h1>
-    <h2>Mobile Application Sidekick</h2>
-    <p>lorem ipsum.</p>
-      
+    <div class="container-fluid">
+      <div class="jumbotron">
+        <h1 class="display-4">LifeLine Animal Project</h1>
+        <p class="lead">Partner app for a local nonprofit</p>
+        <ul>
+        <li class="team">The Team:</li>
+        <li>Lance Dudkowski </li>
+        <li>McKenzie Peterson</li>
+        <li>Niki Zaldivar</li>
+        </ul>
+      </div>
+    </div>
   </div>
-<footer>
+
+
+  <footer>
   <div class="flexFooter">
   <ul class="footerNav">
     <li> <a class="footerItem" href="portfolio.html">PORTFOLIO</a></li>
