--- a/portfolio.html
+++ b/portfolio.html
@@ -39,16 +39,17 @@
     <h1 id="title">Portfolio</h1>
     <div class="uxWork">
       <div class="uxCard"  id="firstCard">
-          <img src="./images/Relaxination Logo.png">
+          <a href="case-study-LifeLine.html">
+              <img id="uxWhiteCard" src="images/LAP Logo.png"></a>
       </div>
       <div class="uxCard">
-        <img src="./images/Cut N' Run Logo.png">
+        <img src="images/Relaxination Logo.png">
       </div>
       <div class="uxCard" >
-        <img id="uxWhiteCard" src="./images/LAP Logo.png">
+        <img src="images/Cut N' Run Logo.png">
       </div>
       <div class="uxCard">
-        <img src="./images/NSA UX Logo – 1.png">
+        <img src="images/NSA UX Logo – 1.png">
       </div>
     </div>
   </div>
