--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 
 <head>
   <title>Lance Dudkowski UX Portfolio</title>
+  <!-- Hotjar Tracking Code for https://ldudkowski3.github.io/HW-19/ -->
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:1982214,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="fonts">
   <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="fonts">
