--- a/case-study-LifeLine.html
+++ b/case-study-LifeLine.html
@@ -49,6 +49,23 @@
         </ul>
       </div>
     </div>
+    <div class="container-fluid">
+      <h1 class="display-4">Overview</h1>
+      <div class="overviewContainer">
+        <p class="overview">Atlanta's LifeLine Animal Project manages animal shelters and volunteer programs to keep pets and people together. Through the foster and volunteer programs they seek to house and care for the thousands of animals that enter their doors. 
+          What first started as a website redesign for LifeLine Animal Project morphed into creating a partner app for the nonprofit to improve the adoption process for the animals and the communication with volunteers. Our goal: Boost LifeLine Animal Project's communication with the community interested in volunteering, fostering, and adopting shelter animals.
+        </p>
+      </div>
+      <div class="overviewPicContainer">
+        <img class="overviewPic" src="images/LAP Logo.png">
+      </div>
+    </div>
+    <div class="container">
+      <h1 class="display-4">Discover</h1>
+      <div class="container">
+        <img class="" src="images/LAP-site.png">
+      </div>
+    </div>
   </div>
 
 
