--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       </div>
       <div class="navigationBar">
         <ul class="navList">
-          <li class="navItem">
+          <li class="navItem navHover">
             <a class="navItem" href="portfolio.html">PORTFOLIO</a></li>
-          <li class="navItem">
+          <li class="navItem navHover">
             <a class="navItem" href="aboutme.html">ABOUT ME</a></li>
-          <li class="navItem">
+          <li class="navItem navHover">
             <a class="navItem" href="contact.html">CONTACT</a></li>
-          <li class="navItem" id="lastNav">
+          <li class="navItem navHover" id="lastNav">
             <a class="navItem" id="lastNav" href="resume.html">RESUME</a></li>
         </ul>
         <div>
