--- a/portfolio.html
+++ b/portfolio.html
@@ -40,16 +40,20 @@
     <div class="uxWork">
       <div class="uxCard"  id="firstCard">
           <a href="case-study-LifeLine.html">
-              <img id="uxWhiteCard" src="images/LAP Logo.png"></a>
+            <img id="uxWhiteCard" src="images/LAP Logo.png"></a>
       </div>
       <div class="uxCard">
-        <img src="images/Relaxination Logo.png">
+        <a href="case-study-Relaxination.html">
+          <img src="images/Relaxination Logo.png"></a>
       </div>
       <div class="uxCard" >
-        <img src="images/Cut N' Run Logo.png">
+        
+        <a href="case-study-Cut-n-Run.html">
+          <img src="images/Cut N' Run Logo.png"></a>
       </div>
       <div class="uxCard">
-        <img src="images/NSA UX Logo – 1.png">
+        <a href="case-study-NSA-redesign.html">
+        <img src="images/NSA UX Logo – 1.png"></a>
       </div>
     </div>
   </div>
